@@ -1,5 +1,6 @@
 from ucommon 5.2.2 to 5.2.3
 - sort specific string collation functions added
+- more stringpager manipulations possible
 
 from ucommon 5.2.1 to 5.2.2
 - use strcoll for sorting when possible
